[gd_scene load_steps=9 format=3 uid="uid://drw7g334urq5"]

[ext_resource type="Script" uid="uid://cfbjxfwxiv0e2" path="res://scripts/game.gd" id="1_uwrxv"]
[ext_resource type="PackedScene" uid="uid://boyxbvbpun32g" path="res://scenes/paddle.tscn" id="2_yqjtg"]
[ext_resource type="PackedScene" uid="uid://cpdm0w0a42p6u" path="res://scenes/ball.tscn" id="3_lnu2h"]
[ext_resource type="PackedScene" uid="uid://bgbxy227ckqj6" path="res://scenes/wall.tscn" id="4_lbhrr"]
[ext_resource type="PackedScene" uid="uid://xa4fxw1hapst" path="res://scenes/detector.tscn" id="5_iywne"]
[ext_resource type="PackedScene" uid="uid://dl47486gxy70h" path="res://scenes/hud.tscn" id="6_p57ef"]
[ext_resource type="AudioStream" uid="uid://bjskr5kd7670b" path="res://assets/8-bit-explosion-3-340456.mp3" id="7_u5sy4"]

[sub_resource type="QuadMesh" id="QuadMesh_8cj0n"]

[node name="Game" type="Node2D"]
script = ExtResource("1_uwrxv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource("6_p57ef")]

[node name="Background" type="MeshInstance2D" parent="."]
modulate = Color(0.0177324, 0.0177324, 0.0177324, 1)
z_index = -10
position = Vector2(642, 363)
scale = Vector2(1310.5, 745.5)
mesh = SubResource("QuadMesh_8cj0n")
metadata/_edit_lock_ = true

[node name="PaddleOne" parent="." instance=ExtResource("2_yqjtg")]
position = Vector2(50, 360)
is_player_one = true

[node name="PaddleTwo" parent="." node_paths=PackedStringArray("ball") instance=ExtResource("2_yqjtg")]
position = Vector2(1230, 360)
is_ai_controlled = true
ball = NodePath("../Ball")

[node name="Ball" parent="." instance=ExtResource("3_lnu2h")]
position = Vector2(640, 360)

[node name="WallUp" parent="." instance=ExtResource("4_lbhrr")]
position = Vector2(640, -10)

[node name="WallDown" parent="." instance=ExtResource("4_lbhrr")]
position = Vector2(640, 730)

[node name="DetectorLeft" parent="." instance=ExtResource("5_iywne")]
position = Vector2(-10, 360)
is_left = true

[node name="DetectorRight" parent="." instance=ExtResource("5_iywne")]
position = Vector2(1290, 360)

[node name="StartDelay" type="Timer" parent="."]

[node name="Explosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_u5sy4")
